# Alphafold_Pytorch

./: .gitignore  README.md  pyproject.toml
scripts/: convert_deepmind_weights.py
src/alphafold3_pytorch/: __init__.py
src/alphafold3_pytorch/model/: __init__.py  atom_head.py  config.py  diffusion.py  input_embedder.py  model.py  pairformer.py
tests/: test_shapes.py
