[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphafold3-pytorch"
version = "0.1.0"
description = "Pure PyTorch AlphaFold 3-style model implementation scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AlphaFold3 PyTorch contributors" }]
dependencies = ["torch>=2.2"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
